BUG: HDFStore.select(where=...) silently returns empty DataFrame with datetime64[us] index (#64318)

--- a/doc/source/whatsnew/v3.0.2.rst
+++ b/doc/source/whatsnew/v3.0.2.rst
@@ -13,6 +13,7 @@ including other versions of pandas.
 
 Fixed regressions
 ~~~~~~~~~~~~~~~~~
+- Fixed regression in :meth:`HDFStore.select` where the ``where`` clause on a datetime index silently returned empty results when the index had non-nanosecond resolution (:issue:`64310`)
 
 .. ---------------------------------------------------------------------------
 .. _whatsnew_302.bug_fixes:
